# HR-bot

./: .env.sample  README.md  docker-compose.yml
api/: Dockerfile  entrypoint.sh  pyproject.toml
api/src/: main.py
api/src/api/v1/: auth.py
api/src/core/: config.py
api/src/db/: auth_storage.py
api/src/models/: models.py
api/src/services/: auth_service.py
bot/: main.py  pyproject.toml  settings.py  ui.py  utils.py
