[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Ivan Nedobezhkin <ivan.nedobezkin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pydantic-settings = "^2.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
